# CppBot

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
cmake/: cppbot-config.cmake.in  utils.cmake
docs/: bot_8hpp_source.html  classcppbot_1_1Bot.html  classcppbot_1_1_bot-members.html  classcppbot_1_1_bot.html  classes.html  classhandlers_1_1MessageHandler.html  classhandlers_1_1_message_handler-members.html  classstates_1_1State-members.html  classstates_1_1StatesForm-members.html  classstates_1_1StatesForm.html  classstates_1_1StatesForm__inherit__graph.dot  classstates_1_1_state_context.js  classstates_1_1_state_machine.html  classstates_1_1_states_form-members.html  classstates_1_1_storage-members.html  classtypes_1_1InputMediaAudio.html  classtypes_1_1InputMediaDocument__inherit__graph.dot  classtypes_1_1InputMediaVideo.html  classtypes_1_1_input_file.html  classtypes_1_1_input_media.js  classtypes_1_1_input_media_audio-members.html  classtypes_1_1_input_media_document-members.html  classtypes_1_1_input_media_document.html  classtypes_1_1_input_media_document__inherit__graph.dot  classtypes_1_1_input_media_video__inherit__graph.dot  dir_050c5fe36aab20723087377e885a25bd.html  dir_155f758263c733a3dfa4f8f37d16bd82_dep.dot  dir_7d0b9e2f0546c3d910b5684554a584b4_dep.dot  dir_8a5f375564d639c9224138596e63cd06_dep.dot  dir_99c65f9a25451565ba0b8c33df6f1678_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e754fd9bcb8b040d1f011f426f0f0d21.html  dir_e754fd9bcb8b040d1f011f426f0f0d21_dep.dot  functions_rela.html  handlers_8hpp.js  (+42 more)
(+349 files in other folders)
